--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,28 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+async-timeout==4.0.3
+attrs==24.2.0
 certifi==2024.8.30
+charset-normalizer==3.4.0
 distro==1.9.0
 exceptiongroup==1.2.2
+frozenlist==1.5.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
 idna==3.10
 jiter==0.7.0
-openai==1.53.0
+multidict==6.1.0
+openai==0.28.0
+propcache==0.2.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+requests==2.32.3
 sniffio==1.3.1
 tqdm==4.66.6
 typing_extensions==4.12.2
+urllib3==2.2.3
+yarl==1.17.1
